# pokemon-go-mcp

./: .gitignore  DOCKER.md  Dockerfile  QWEN.md  README.md  eggs.json  eggs.min.json  events.json  events.min.json  generate_data_readme.py  generate_real_json_from_fixtures.py  populate_test_data.py  promo-codes.json  promo-codes.min.json  prompt.txt  pyproject.toml  raid_day_html_analysis.html  raids.json  raids.min.json  research.json  research.min.json  rocket-lineups.json  rocket-lineups.min.json  rocket_lineups.html  run.py  run_tests.py  server.py  test_raid_day_standalone.py  test_tools.py
.claude/: settings.local.json
.claude/agents/: leekduck-scraper-architect.md  mcp-schema-sync.md
.github/workflows/: scrape-pokemon-data.yml
.qwen/commands/: push.toml
data/: eggs.json  events.json  promo-codes.json  raids.json  research.json  research.min.json  rocket-lineups.json
pogo_mcp/: __init__.py  api_client.py  eggs.py  events.py  promo_codes.py  raids.py  research.py  rocket_lineups.py  server.py  types.py  utils.py
pogo_scraper/: eggs.py  events.py  promo_codes.py  raids.py  requirements.txt  research.py  rocket_lineups.py  scraper.py
pogo_scraper/parsers/events/: base_event.py  comday_details.py  generic_event_details.py  raid_battle_details.py  raid_day_details.py  (+3 more)
scripts/: generate_test_data.py
tests/: __init__.py  test_basic.py  test_egg_parsing.py  test_events_parsing.py  test_promo_codes_parsing.py  test_raids_parsing.py  test_research_parsing.py  test_rocket_lineups.py  test_timed_research_code_parsing.py
tests/fixtures/: current_eggs.html  current_events.html  current_promos.html  current_raids.html  current_research.html  current_rocket_lineups.html  timed_research_event.html
tests/integration/: README.md  __init__.py  conftest.py  test_cross_cutting_tools.py  test_egg_tools.py  test_event_tools.py  test_mcp_server.py  test_promo_code_tools.py  test_raid_tools.py  test_research_tools.py  test_rocket_tools.py
(+2 files in other folders)
